# event-processing-pipeline

./: .dockerignore  .gitignore  CMakeLists.txt  command.json  dockerfile  main.cpp  setup.sh
.github/workflows/: deploy.yaml
Enums/: Enums.hpp
ExchangeType/: CMakeLists.txt  ExchangeType.cpp  ExchangeType.hpp
FilterClass/: FilterClass.cpp  FilterClass.hpp  struct.hpp
Instrument/: Equity.hpp  Future.hpp  Instrument.hpp  InstrumentFactory.hpp  Option.hpp
Instrument/Equity/: Equity.cpp  Equity.hpp
Instrument/Future/: Future.cpp  Future.hpp
Instrument/Option/: Option.cpp  Option.hpp
environment/: lambda.hpp  processworkflow.hpp
macro/: logger.hpp
namespace/: data.hpp  equity.hpp  future.hpp  option.hpp
other/: future.hpp  header.hpp  main.cpp  option.hpp
other/equity/: equity.cpp  equity.hpp
other/future/: future.cpp  future.hpp
other/option/: option.cpp  option.hpp
post/: post.cpp
postJson/: CMakeLists.txt  postJson.cpp  postJson.hpp
process/: CMakeLists.txt  process.cpp  process.hpp
utils/: CMakeLists.txt  gzip_json.cpp  gzip_json.hpp
workflow/: CMakeLists.txt  workflow.cpp  workflow.hpp
